--- a/apps/order/templates/core/order.html
+++ b/apps/order/templates/core/order.html
@@ -7,27 +7,7 @@
 <script rel="stylesheet" src="{% static '/js/order.js' %}" type="text/javascript"></script>
 
 
-<div class="cover">
-  <div class="cover-desktop">
-     <div class="cover-text">
-        <h1>Kom i gang med bestillingen</h1>
-        <p id="coverText2">Fyll ut skjemaet under, også kommer vi tilbake til deg innen 4 timer</p>
-     </div>
-     <div class="img">
-        <img src="{% static '/images/covers/cover-2.png' %}" alt="cover-img">
-    </div>
-  </div>
-  <div class="cover-mobile">
-     <div class="cover-text">
-        <h1>Kom i gang med bestillingen</h1>
-        <p id="coverText2">Fyll ut skjemaet under, også kommer vi tilbake til deg innen 4 timer</p>
-     </div>
-     <div class="img">
-        <img src="{% static '/images/covers/cover-2.png' %}" alt="cover-img">
-    </div>
-  </div>
-</div>
-
+<!-- LOADER -->
  <div class="load-wrapp" id="orderLoader">
     <div class="load-2">
       <div class="line"></div>
@@ -35,6 +15,22 @@
       <div class="line"></div>
     </div>
   </div>
+
+<!-- COVER -->
+<div class="cover" id="cover">
+   <div class="content" id="coverContent">
+      <div class="text">
+         <h1 class="maintext">kom i gang med</h1>
+         <h1 class="secondtext">bestillingen</h1>
+         <p class="cover-paragraph">Velg det som passer for deg, og våres designere vil ta kontakt med deg innen 5 timer</p>
+      </div>
+      <div class="cover-action">
+         <a href="/bestill">Bestill</a>
+         <a onclick="contact()">Kontakt oss</a>
+      </div>
+      <img src="{% static '/images/covers/cover-3.png' %}" alt="order page cover">
+   </div>
+</div>
 
 <div class="make-order">
     <form method='post' id="makeOrder" enctype="multipart/form-data">
