--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -10,27 +10,254 @@ html, body {
     scroll-behavior: smooth;
 }
 
-// STANDARD PHONE
-#navBarSpace{
-  display: block;
-}
+// GLOBAL
 .scroll-to{
   background: transparent;
 }
-.hover{
-  &:hover{
-    background: white;
-    color: rgb(60, 84, 160);
-    border: 2px solid rgb(60, 84, 160);
-    box-shadow: none;
+// // // STANDARD PHONE
+// SERVICES
+.services{
+  background: transparent;
+  width: 100%;
+  height: auto;
+  position: relative;
+  &.active{
+    .service-1{
+      opacity: 1;
+      transform: translateX(0) translateY(40px);
+    }
+    .service-2{
+      opacity: 1;
+      transform: translateX(0) translateY(40px);
+    }
+    .service-3{
+      opacity: 1;
+      transform: translateX(0) translateY(40px);
+    }
+    .service-4{
+      opacity: 1;
+      transform: translateX(0) translateY(40px);
+    }
   }
-  &:active{
-    background: white;
-    color: rgb(60, 84, 160);
-    border: 2px solid rgb(60, 84, 160);
-    box-shadow: none;
+  .border-up{
+    background: rgb(230, 230, 230);
+    height: 2px;
+    width: 65%;
+    margin: 80px auto;
+    transform: translateY(-80px);
+  }
+  h1{
+    &.heading{
+      padding-top: 5px;
+      text-align: center;
+      width: 100%;
+      text-transform: uppercase;
+      font-family: 'Sniglet', cursive;
+      color: white;
+      font-weight: 700;
+      font-size: 26px;
+    }
+  }
+  .services-paragraph{
+    font-size: 16px;
+    color: white;
+    font-family: 'Sniglet', cursive;
+    opacity: 0.7;
+    text-align: center;
+  }
+  .service{
+    width: 100%;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    height: 100px;
+    margin: 20px;
+  }
+  .service-1{
+    width: auto;
+    display: flex;
+    transform: translateY(40px) translateX(-140px);
+    backdrop-filter: blur(100px);
+    opacity: 0;
+    transition: all 0.7s ease-in-out;
+    animation: services-1-background 2s infinite;
+    animation-timing-function: ease-in-out;
+    animation-direction:alternate;
+    &.click{
+      margin-top: 25px;
+      margin-bottom: 25px;
+      margin-left: 0;
+      margin-right: 0;
+      transform: scale(1.1);
+    }
+    // SERVICE BACKGROUND KEYFRAME ANIMATION
+    @keyframes services-1-background {
+      from{background: rgb(99, 124, 204);}
+      to {background: rgb(53, 75, 148);}
+    }
+    .text{
+      width: 50%;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      h1{
+        font-size: 22px;
+        color: white;
+        text-transform: uppercase;
+        font-family: 'Sniglet', cursive;
+      }
+    }
+    .img{
+      width: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      i{
+        font-size: 48px;
+        color: white;
+      }
+    }
+  }
+  .service-2{
+    width: auto;
+    display: flex;
+    transform: translateY(40px) translateX(140px);
+    backdrop-filter: blur(100px);
+    opacity: 0;
+    transition: all .7s ease-in-out;
+    animation: services-2-background 2s infinite;
+    animation-timing-function: ease-in-out;
+    animation-direction:alternate;
+    &.click{
+      margin-top: 55px;
+      margin-bottom: 25px;
+      margin-left: 0;
+      margin-right: 0;
+      transform: scale(1.1);
+    }
+    // SERVICE BACKGROUND KEYFRAME ANIMATION
+    @keyframes services-2-background {
+      from{background: rgb(99, 124, 204);}
+      to {background: rgb(53, 75, 148);}
+    }
+    .text{
+      width: 50%;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      h1{
+        font-size: 22px;
+        color: white;
+        text-transform: uppercase;
+        font-family: 'Sniglet', cursive;
+      }
+    }
+    .img{
+      width: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      i{
+        font-size: 48px;
+        color: white;
+      }
+    }
+  }
+  .service-3{
+    width: auto;
+    display: flex;
+    transform: translateY(40px) translateX(-140px);
+    backdrop-filter: blur(100px);
+    opacity: 0;
+    transition: all .7s ease-in-out;
+    animation: services-3-background 2s infinite;
+    animation-timing-function: ease-in-out;
+    animation-direction:alternate;
+    &.click{
+      margin-top: 55px;
+      margin-bottom: 25px;
+      margin-left: 0;
+      margin-right: 0;
+      transform: scale(1.1);
+    }
+    // SERVICE BACKGROUND KEYFRAME ANIMATION
+    @keyframes services-3-background {
+      from{background: rgb(99, 124, 204);}
+      to {background: rgb(53, 75, 148);}
+    }
+    .text{
+      width: 50%;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      h1{
+        font-size: 22px;
+        color: white;
+        text-transform: uppercase;
+        font-family: 'Sniglet', cursive;
+      }
+    }
+    .img{
+      width: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      i{
+        font-size: 48px;
+        color: white;
+      }
+    }
+  }
+  .service-4{
+    width: auto;
+    display: flex;
+    transform: translateY(40px) translateX(140px);
+    backdrop-filter: blur(100px);
+    opacity: 0;
+    transition: all .7s ease-in-out;
+    animation: services-4-background 2s infinite;
+    animation-timing-function: ease-in-out;
+    animation-direction:alternate;
+    &.click{
+      margin-top: 55px;
+      margin-bottom: 25px;
+      margin-left: 0;
+      margin-right: 0;
+      transform: scale(1.1);
+    }
+    // SERVICE BACKGROUND KEYFRAME ANIMATION
+    @keyframes services-4-background {
+      from{background: rgb(99, 124, 204);}
+      to {background: rgb(53, 75, 148);}
+    }
+    .text{
+      width: 50%;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      h1{
+        font-size: 22px;
+        color: white;
+        text-transform: uppercase;
+        font-family: 'Sniglet', cursive;
+      }
+    }
+    .img{
+      width: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      i{
+        font-size: 48px;
+        color: white;
+      }
+    }
   }
 }
+// PRODUCT
 .product-section{
   background: transparent;
   text-align: center;
@@ -77,7 +304,7 @@ html, body {
     padding: 5px;
     opacity: 0;
     transition: all ease-in .5s;
-    transform: translateY(-40px);
+    transform: translateY(80px);
     max-width: 320px;
     .ribbon{
       width: 30%;
@@ -131,6 +358,7 @@ html, body {
     }
   }
 }
+// INFO/PROCCESS
 .proccess{
   background: transparent;
   width: 100%;
@@ -310,6 +538,7 @@ html, body {
     }
   }
 }
+// CONTACT US
 .contact-us{
   background: transparent;
   width: 100%;
@@ -416,408 +645,6 @@ html, body {
         &:hover{
           background: white;
           color: black;
-        }
-      }
-    }
-  }
-}
-.load-wrapp {
-  float: left;
-  width: 100%;
-  height: 100vh;
-  padding: 20px ;
-  border-radius: 5px;
-  text-align: center;
-  background-color: rgb(60, 84, 160);
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 100000;
-  opacity: 1;
-  pointer-events: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all .5s ease-in;
-  &.hidden{
-    opacity: 0;
-  }
-  
-  .load-wrapp p {
-    padding: 0 0 20px;
-  }
-  .load-wrapp:last-child {
-    margin-right: 0;
-  }
-  
-  .line {
-    display: inline-block;
-    width: 15px;
-    height: 15px;
-    border-radius: 15px;
-    background-color: white;
-  }
-  
-  .ring-1 {
-    width: 10px;
-    height: 10px;
-    margin: 0 auto;
-    padding: 10px;
-    border: 7px dashed rgb(60, 84, 160);
-    border-radius: 100%;
-  }
-  
-  .ring-2 {
-    position: relative;
-    width: 45px;
-    height: 45px;
-    margin: 0 auto;
-    border: 4px solid rgb(60, 84, 160);
-    border-radius: 100%;
-  }
-  
-  .ball-holder {
-    position: absolute;
-    width: 12px;
-    height: 45px;
-    left: 17px;
-    top: 0px;
-  }
-  
-  .ball {
-    position: absolute;
-    top: -11px;
-    left: 0;
-    width: 16px;
-    height: 16px;
-    border-radius: 100%;
-    background: $loader;
-  }
-  
-  .letter-holder {
-    padding: 16px;
-  }
-  
-  .letter {
-    float: left;
-    font-size: 14px;
-    color: #777;
-  }
-  
-  .square {
-    width: 12px;
-    height: 12px;
-  border-radius: 4px;
-  background-color: $loader;
-}
-
-.spinner {
-  position: relative;
-  width: 45px;
-  height: 45px;
-  margin: 0 auto;
-}
-
-.bubble-1,
-.bubble-2 {
-  position: absolute;
-  top: 0;
-  width: 25px;
-  height: 25px;
-  border-radius: 100%;
-  background-color: $loader;
-}
-
-.bubble-2 {
-  top: auto;
-  bottom: 0;
-}
-
-.bar {
-  float: left;
-  width: 15px;
-  height: 6px;
-  border-radius: 2px;
-  background-color: #4b9cdb;
-}
-
-/* =Animate the stuff
------------------------- */
-.load-1 .line:nth-last-child(1) {
-  animation: loadingA 1.5s 1s infinite;
-}
-.load-1 .line:nth-last-child(2) {
-  animation: loadingA 1.5s 0.5s infinite;
-}
-.load-1 .line:nth-last-child(3) {
-  animation: loadingA 1.5s 0s infinite;
-}
-
-.load-2 .line:nth-last-child(1) {
-  animation: loadingB 1.5s 1s infinite;
-}
-.load-2 .line:nth-last-child(2) {
-  animation: loadingB 1.5s 0.5s infinite;
-}
-.load-2 .line:nth-last-child(3) {
-  animation: loadingB 1.5s 0s infinite;
-}
-
-.load-3 .line:nth-last-child(1) {
-  animation: loadingC 0.6s 0.1s linear infinite;
-}
-.load-3 .line:nth-last-child(2) {
-  animation: loadingC 0.6s 0.2s linear infinite;
-}
-.load-3 .line:nth-last-child(3) {
-  animation: loadingC 0.6s 0.3s linear infinite;
-}
-
-.load-4 .ring-1 {
-  animation: loadingD 1.5s 0.3s cubic-bezier(0.17, 0.37, 0.43, 0.67) infinite;
-}
-
-.load-5 .ball-holder {
-  animation: loadingE 1.3s linear infinite;
-}
-
-.load-6 .letter {
-  animation-name: loadingF;
-  animation-duration: 1.6s;
-  animation-iteration-count: infinite;
-  animation-direction: linear;
-}
-
-.l-1 {
-  animation-delay: 0.48s;
-}
-.l-2 {
-  animation-delay: 0.6s;
-}
-.l-3 {
-  animation-delay: 0.72s;
-}
-.l-4 {
-  animation-delay: 0.84s;
-}
-.l-5 {
-  animation-delay: 0.96s;
-}
-.l-6 {
-  animation-delay: 1.08s;
-}
-.l-7 {
-  animation-delay: 1.2s;
-}
-.l-8 {
-  animation-delay: 1.32s;
-}
-.l-9 {
-  animation-delay: 1.44s;
-}
-.l-10 {
-  animation-delay: 1.56s;
-}
-
-.load-7 .square {
-  animation: loadingG 1.5s cubic-bezier(0.17, 0.37, 0.43, 0.67) infinite;
-}
-
-.load-8 .line {
-  animation: loadingH 1.5s cubic-bezier(0.17, 0.37, 0.43, 0.67) infinite;
-}
-
-.load-9 .spinner {
-  animation: loadingI 2s linear infinite;
-}
-.load-9 .bubble-1,
-.load-9 .bubble-2 {
-  animation: bounce 2s ease-in-out infinite;
-}
-.load-9 .bubble-2 {
-  animation-delay: -1s;
-}
-
-.load-10 .bar {
-  animation: loadingJ 2s cubic-bezier(0.17, 0.37, 0.43, 0.67) infinite;
-}
-
-@keyframes loadingA {
-  0 {
-    height: 15px;
-  }
-  50% {
-    height: 35px;
-  }
-  100% {
-    height: 15px;
-  }
-}
-
-@keyframes loadingB {
-  0 {
-    width: 15px;
-  }
-  50% {
-    width: 35px;
-  }
-  100% {
-    width: 15px;
-  }
-}
-
-@keyframes loadingC {
-  0 {
-    transform: translate(0, 0);
-  }
-  50% {
-    transform: translate(0, 15px);
-  }
-  100% {
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes loadingD {
-  0 {
-    transform: rotate(0deg);
-  }
-  50% {
-    transform: rotate(180deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes loadingE {
-  0 {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes loadingF {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes loadingG {
-  0% {
-    transform: translate(0, 0) rotate(0deg);
-  }
-  50% {
-    transform: translate(70px, 0) rotate(360deg);
-  }
-  100% {
-    transform: translate(0, 0) rotate(0deg);
-  }
-}
-
-@keyframes loadingH {
-  0% {
-    width: 15px;
-  }
-  50% {
-    width: 35px;
-    padding: 4px;
-  }
-  100% {
-    width: 15px;
-  }
-}
-
-@keyframes loadingI {
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes bounce {
-  0%,
-  100% {
-    transform: scale(0);
-  }
-  50% {
-    transform: scale(1);
-  }
-}
-
-@keyframes loadingJ {
-  0%,
-  100% {
-    transform: translate(0, 0);
-  }
-  
-  50% {
-    transform: translate(80px, 0);
-    background-color: #f5634a;
-    width: 25px;
-  }
-}
-}
-// NORMAL DESKTOP
-@media only screen and (min-device-width:1024px) { 
-  h1{
-    &.heading{
-      font-size: 34px;
-    }
-  }
-  .product-section{
-    .product-card{
-      width: 100%;
-    }
-  }
-  .contact-us{
-    form{
-      margin: 15px auto;
-      width: 65%;
-    }
-  }
-  .proccess{
-    .content{
-      width: 100%;
-      height: auto;
-      margin: 0;
-      .class-1{
-        p{
-          margin: 5px auto;
-          width: 55%;
-          font-size: 15px;
-        }
-      }
-      .class-2{
-        p{
-          margin: 5px auto;
-          width: 55%;
-          font-size: 15px;
-        }
-      }
-      .class-3{
-        p{
-          margin: 5px auto;
-          width: 55%;
-          font-size: 15px;
-        }
-      }
-      .class-4{
-        p{
-          margin: 5px auto;
-          width: 55%;
-          font-size: 15px;
-        }
-      }
-      .class-5{
-        p{
-          margin: 5px auto;
-          width: 55%;
-          font-size: 15px;
         }
       }
     }
