--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -44,29 +44,22 @@
   right: 0px;
   z-index: 1000;
   border-left: 1px solid rgba(220, 220, 220, 0.7);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 #navbar .hamburger span {
   display: block;
-  width: 20px;
-  height: 2px;
+  width: 6px;
+  height: 6px;
   background: black;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
-}
-
-#navbar .hamburger .upper-span {
-  margin-bottom: 5px;
-}
-
-#navbar .hamburger .center-span {
-  opacity: 0;
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
-}
-
-#navbar .hamburger .lower-span {
-  margin-top: 5px;
+  border-radius: 100%;
+  margin: 3px;
+  -webkit-transform: translateX(-9px);
+          transform: translateX(-9px);
 }
 
 #navbar .hamburger .close-hamburger {
