--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -40,22 +40,22 @@
         right: 0px;
         z-index: 1000;
         border-left: 1px solid rgba(220, 220, 220, 0.7);
+        display: flex;
         span{
             display: block;
-            width: 20px;
-            height: 2px;
+            width: 6px;
+            height: 6px;
             background: black;
             transition: all 0.2s ease-in-out;
+            border-radius: 100%;
+            margin: 3px;
+            transform: translateX(-9px);
         }
         .upper-span{
-            margin-bottom: 5px;
         }
         .center-span{
-            opacity: 0;
-            transform: translateX(0);
         }
         .lower-span{
-            margin-top: 5px;
         }
         .close-hamburger{
             font-size: 26px;
