--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -50,11 +50,17 @@
       </div>
       <div class="text">
          <h1>Responsiv<br>design</h1>
+         <div class="about" id="aboutService1">
+            <p>Alle designene våres er responsive og moderne. De er designet av de beste webdesignerne i Norge, og garanterer at du kommer til å elske den!</p>
+         </div>
       </div>
    </div>
    <div class="service-2 service" id="service2" onclick="services2()">
       <div class="text">
          <h1>Veileding</h1>
+         <div class="about" id="aboutService2">
+            <p>Du får 4 timer gratis veileding hver uke etter bestilling, sånn at du kan gjøre endringer på nettsiden.</p>
+         </div>
       </div>
       <div class="img">
          <i class="fas fa-hands-helping"></i>      
@@ -66,14 +72,20 @@
       </div>
       <div class="text">
          <h1>Norges<br>beste</h1>
+         <div class="about" id="aboutService3">
+            <p>Vi har et team som består av de mest motiverte og kreative webdesignerne i hele Norge. Vi har bygget over 100 nettsider i løpet av de siste 8 måneder, og våre designere og utviklere har fått en topp anmeldelse!</p>
+         </div>
       </div>
    </div>
    <div class="service-4 service" id="service4" onclick="services4()">
-      <div class="img">
-         <i class="fas fa-coins"></i>
-      </div>
       <div class="text">
          <h1>Lave priser</h1>
+         <div class="about" id="aboutService4">
+            <p>Når det gjelder priser, så har vi har nemlig de laveste prisene på markedet ;)</p>
+         </div>
+      </div>
+      <div class="img">
+         <i class="fas fa-coins"></i>
       </div>
    </div>
 </div>
