--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -39,7 +39,7 @@
                     <a onclick="prices()">Priser</a>
                     <a href="/om-webiser">Om oss</a>
                     <a onclick="info()">Prosess</a>
-                    <a onclick="hosting()">Hosting</a>
+                    <a onclick="jobs()">Jobber</a>
                     <a onclick="contact()">Kontakt oss</a>
                 </li>   
             </ul>
